fix comments jump link and allow for livefyre

--- a/less/pl-wordpress.less
+++ b/less/pl-wordpress.less
@@ -138,6 +138,8 @@ ul.sidebar_widgets{
 
 .wp-comments{ 
 	margin: 1em 0 0; 
+	padding-top: 40px;
+    margin-top: -40px;
 	.wp-comments-pad{ 
 		padding: 10px 0; 
 		> #respond{
